# single-html-page-project-HundredVisionsGuy

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  store_test_results.sh  tox.ini
.github/classroom/: autograding.json
.github/workflows/: ci-testing.yml
project/: README.md  index.html  test.html
report/: report.html  test_results.txt
tests/: test_general_requirements.py  test_html_requirements.py  test_pytest_results.py
webanalyst/: HTMLReport.py  get_pytest_results.py  report.py  report_template.html
