[tool.poetry]
name = "single-html-page-project"
version = "0.1.0"
description = "An autograder for a student's single HTML page web project (designed to be forked for each student)."
authors = ["hundredvisionsguy <cwinikka@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "single_html_page_project"}]

[tool.poetry.dependencies]
python = "^3.8"
file-clerk = "^1.0.9"
webcode-tk = "^0.3.2"
bs4 = "^0.0.1"
pytest = "^7.1.3"
pytest-html = "^3.1.1"
pypiwin32 = "^223"


[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
